--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
+  "name": "detectify-ai",
+  "version": "1.0.0",
+  "description": "AI Detectives game for learning AI concepts",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "node server.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "node-fetch": "^2.7.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
